k8s/get-evalue.com/prod-evalue-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-api
  namespace: evalue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-api
  template:
    metadata:
      labels:
        app: external-api
    spec:
      containers:
      - name: external-api
        image: rg.fr-par.scw.cloud/evalue/external-api:latest
        ports:
        - containerPort: 4000
        resources:
          requests:
            memory: "0.25G"
            cpu: "0.25"
          limits:
            memory: "1G"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: external-api
  namespace: evalue
spec:
  selector:
    app: external-api
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-api-ingress
  namespace: evalue
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/real-ip-header: "CF-Connecting-IP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - get-evalue.com
    secretName: evalue-tls
  rules:
  - host: get-evalue.com
    http:
      paths:
      - path: /api/v1/
        pathType: Prefix
        backend:
          service:
            name: external-api
            port:
              number: 4000
